[project]
name = "minfo"
version = "0.0.6"
authors = [
  { name="Kai Chen", email="kchen513@sjtu.edu.cn" },
]
description = "Python-based mutual information estimator, designed for multiple data types."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = [
  "numpy>=1.23.5",
  "cython>=0.29.32",
  "numba>=0.56.4",
]

[project.urls]
"Homepage" = "https://github.com/neoneuron/minfo"
"Bug Tracker" = "https://github.com/neoneuron/minfo/issues"